서버내용 반영

--- a/dl/show_model_result.ipynb
+++ b/dl/show_model_result.ipynb
@@ -41,10 +41,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def return_result(f, out_file):\n",
+    "    #f = open('bioRE/mtdnn_weight_new/Predict_result/result.txt')\n",
+    "    \n",
+    "    \n",
+    "    f = open(f)\n",
+    "    user_input = f.readlines()\n",
+    "    user_result_list = \"\"\n",
+    "    with open('dl/model_result/ddi_result.json') as json_file: #model result json\n",
+    "        with open( out_file,\"w\") as writer:    #output 쓰는 file\n",
+    "            json_data = json.load(json_file)\n",
+    "            model_predict = json_data['predictions']\n",
+    "            for user,result in zip(user_input, model_predict):\n",
+    "                user = user.split('\\t')[2]\n",
+    "                if result == 0: \n",
+    "                    result = 'DDI-mechanism'\n",
+    "                elif result == 1:\n",
+    "                    result = 'DDI-effect'\n",
+    "                elif result == 2:\n",
+    "                    result = 'DDI-advise'\n",
+    "                elif result == 3:\n",
+    "                    result = 'DDI-int'\n",
+    "                else:\n",
+    "                    result = 'DDI-false'\n",
+    "                user_result = str(user)+'\\t'+str(result)+'\\n'\n",
+    "                user_result_file = user_result\n",
+    "                user_result = re.sub(r\"@DRUG\\$\",r'<span style=\"background-color:yellow\">@DRUG$</span>',user_result)\n",
+    "                user_result_list+= user_result + \"\\n\"\n",
+    "                writer.write(user_result_file)\n",
+    "                #print(user_result_list)\n",
+    "    return user_result_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "return_result()"
+   ]
   }
  ],
  "metadata": {
